--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rsbuild-plugin-example",
+  "name": "@rsbuild/plugin-vue2-jsx",
   "version": "0.0.0",
-  "repository": "https://github.com/rspack-contrib/rsbuild-plugin-template",
+  "repository": "https://github.com/rspack-contrib/@rsbuild/plugin-vue2-jsx",
   "license": "MIT",
   "type": "module",
   "exports": {
