chore: update peerDependencies

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "vue": "^2.7.16"
   },
   "peerDependencies": {
-    "@rsbuild/core": "1.x || ^1.0.1-beta.0"
+    "@rsbuild/core": "1.x"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
