--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "types": "./dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+   "build": "rslib build",
+		"dev": "rslib build --watch",
     "lint": "biome check .",
     "lint:write": "biome check . --write",
     "prepare": "simple-git-hooks && npm run build",
@@ -41,11 +41,11 @@
     "@playwright/test": "^1.48.2",
     "@rsbuild/core": "^1.1.0",
     "@rsbuild/plugin-vue2": "^1.0.1",
+    "@rslib/core": "^0.0.16",
     "@types/node": "^20.17.6",
     "nano-staged": "^0.8.0",
     "playwright": "^1.48.2",
     "simple-git-hooks": "^2.11.1",
-    "tsup": "^8.3.5",
     "typescript": "^5.6.3",
     "vue": "^2.7.16"
   },
