--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rsbuild/plugin-vue2-jsx",
   "version": "1.0.2",
-  "repository": "https://github.com/rspack-contrib/@rsbuild/plugin-vue2-jsx",
+  "repository": "https://github.com/rspack-contrib/rsbuild-plugin-vue2-jsx",
   "license": "MIT",
   "type": "module",
   "exports": {
